--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finance Tracker</title>
     <link rel="stylesheet" href="css/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <% const opt = {style:'currency', currency:'IDR'}%> <% const numberFormat =
@@ -22,11 +29,13 @@
       <h1 class="title">Riwayat</h1>
       <% data.forEach((element)=>{ %>
       <div class="box">
-        <h1 class="balance"><%= numberFormat.format(element.balance)%></h1>
-        <p class="date"><%= element.category%></p>
+        <h1 class="balance">
+          <%= numberFormat.format(parseInt(element.jumlahAnggaran))%>
+        </h1>
+        <p class="date"><%= element.kategori%></p>
       </div>
-      <% }) %> <%const total = data.reduce((acc, cur) => acc + cur.balance,
-      0);%>
+      <% }) %> <%const total = data.reduce((acc, cur) => acc +
+      parseInt(cur.jumlahAnggaran), 0);%>
       <h4 class="total-balance">
         Total Anggaran : <%= numberFormat.format(total)%>
       </h4>
@@ -35,13 +44,13 @@
       <div class="menu-box">
         <p>Tambahkan Anggaran</p>
         <a href="/add" class="add">
-          <div class="icon">+</div>
+          <div class="icon"><i class="fas fa-plus"></i></div>
         </a>
       </div>
       <div class="menu-box">
         <p>Tambahkan Pengeluaran</p>
         <a href="/add" class="add">
-          <div class="icon">-</div>
+          <div class="icon"><i class="fas fa-minus"></i></div>
         </a>
       </div>
     </div>
